css/styles.css
body {
  background-color: #0e0e0e;
}

img {
  width: 100%;
}

header {
  padding: 1.1rem 1rem;
  flex-wrap: wrap;
  gap: 0.5rem;
}

header .top-row {
  width: 100%;
}

header h1,
header i {
  font-size: 1.3rem;
}

header i.fa-book-open {
  position: relative;
  top: 2.5px;
}

header h1 {
  font-weight: 700;
}

header .row:first-child {
  justify-content: space-between;
}

header .title {
  gap: 12px;
}

header .icons {
  margin-right: 0.25rem;
  gap: 1rem;
}

[data-view="search"] i.fa-magnifying-glass,
[data-view="create"] i.fa-plus,
[data-view="home"] i.fa-home,
[data-view="saved"] i.fa-bookmark {
  text-decoration: underline red;
  text-underline-offset: 0.5rem;
  text-decoration-line: underline !important;
  text-decoration-color: red !important;
  text-decoration-style: solid !important;
  text-decoration-thickness: 2px !important;
  -webkit-text-decoration-thickness: 2px !important;
}

.content {
  margin-top: 0.5rem;
}

form.create {
  display: flex;
  flex-direction: column;
  padding: 0 1.5rem;
  gap: 0.75rem;
  margin-top: 0;
}

form.create input,
form.create textarea {
  width: 100%;
  background-color: #151515;
  color: #f2f4f3;
  border: 1px solid rgba(255, 255, 255, 0.15);
  border-radius: 0.25rem;
  font-family: Merriweather, serif;
  font-size: 1rem;
  padding: 0.5rem;
}

form.create label {
  display: block;
  font-size: 0.75rem;
  color: #f2f4f3;
  padding: 0.25rem 0.5rem;
}

form.create button {
  background-color: #151515;
  color: #f2f4f3;
  border: 1px solid rgba(255, 255, 255, 0.15);
  border-radius: 0.25rem;
  padding: 0.35rem 0.7rem;
  font-size: 1rem;
}

.modal {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background-color: rgba(0, 0, 0, 0.5);
  align-items: center;
  justify-content: center;
}

.modal .workout-date {
  background-color: #0e0e0e;
  padding: 1rem;
  text-align: center;
  border-radius: 0.5rem;
}

.sets-and-reps > p {
  margin-top: 0;
}

.saved.view {
  width: 100%;
}

.create {
  max-width: 600px;
  margin: auto;
}

.vanilla-calendar {
  width: 300px;
  margin: 0.5rem;
}

.vanilla-calendar span {
  color: black;
}

.workout-date .buttons.calendar {
  margin: 0;
}

.buttons.search button,
.buttons.calendar button {
  padding: 0.75rem;
  background-color: #0e0e0e;
  text-decoration: underline;
}

li.search-item {
  height: 120px;
  padding: 0.25rem;
  border: 1px solid #0e0e0e;
}

li.search-item img {
  width: 112px;
  height: 112px;
  object-fit: cover;
}

li.search-item h3 {
  font-size: 0.75rem;
  font-weight: 500;
  margin-right: 0.25rem;
}

li.search-item span {
  font-size: 0.7rem;
}

li.search-item p {
  font-size: 0.65rem;
  margin-bottom: 0;
}

li.search-item .col:last-child {
  padding: 0.25rem;
  overflow-y: scroll;
  scrollbar-width: none;
}

li.search-item .col:last-child::-webkit-scrollbar {
  display: none;
}

li.search-item .buttons {
  top: 0;
  right: 0;
  opacity: 0.5;
}

li.search-item .buttons button {
  border-radius: 50%;
  width: 20px;
  height: 20px;
}

[data-view="search"] .search-item .buttons {
  display: none;
}

li.search-item .buttons button.x-mark {
  background-color: red;
  transform: scale(1);
}

li.search-item .buttons button.x-mark i {
  position: relative;
  top: 1px;
}

[data-view="search"] li.search-item .buttons {
  display: none;
}

.buttons.search,
.workout-date .buttons.calendar {
  gap: 0.5rem;
  justify-content: space-between;
  margin: 0 1rem 1rem;
}

.modal.outer.delete {
  display: flex;
  justify-content: center;
  align-items: center;
}

.modal > .inner.delete {
  width: 300px;
  background-color: #0e0e0e;
  text-align: center;
  padding: 1rem;
  border-radius: 0.5rem;
}

.modal > .inner.delete .buttons {
  display: flex;
  justify-content: center;
  gap: 1rem;
}

.modal > .inner.delete .buttons button {
  font-size: 1.15rem;
  padding: 0.5rem 1rem;
  border-radius: 0.5rem;
}

.modal > .inner.delete .buttons button.yes {
  background-color: rgb(155, 0, 0);
}

.modal > .inner.delete .buttons button.no {
  background-color: rgb(87, 85, 85);
}

nav {
  display: none;
}

.home .separator {
  height: 33px;
  display: flex;
  align-items: center;
  padding-left: 1rem;
  background-color: #131313;
}

.home h2.separator-text {
  font-size: 0.875rem;
  font-weight: 500;
}

.flex-col {
  display: flex;
  flex-direction: column;
}

.hidden {
  display: none !important;
}

.w-100 {
  width: 100%;
}

.position-relative {
  position: relative;
}

.position-absolute {
  position: absolute;
}

@media only screen and (min-width: 768px) {
  button:hover {
    filter: brightness(120%);
  }

  .home,
  .search,
  .create,
  .saved {
    margin-right: 3rem;
  }

  .create {
    margin: auto;
  }

  ul.search,
  ul.saved {
    display: flex;
    flex-direction: column;
    margin-right: 3rem;
  }

  .search.view > ul.search,
  .home.view > ul.search:last-child {
    margin-bottom: 5rem;
  }

  .buttons.search {
    position: fixed;
    bottom: 0;
    gap: 1rem;
    justify-content: space-between;
    padding-right: 6rem;
    padding-left: 8rem;
    padding-bottom: 0.5rem;
    padding-top: 0.5rem;
    background-color: #171717;
    margin: 0;
  }

  .buttons.search button,
  .buttons.caldendar button {
    padding: 0.75rem;
    font-size: 1rem;
    background-color: #1a1a1a;
    text-decoration: none;
  }

  .workout-date .buttons button {
    margin: 0.5rem 0.25rem 0;
  }

  li.search-item {
    height: 204px;
    padding: 0.75rem 1.125rem 0.75rem 0.75rem;
    border-radius: 1.5rem;
    background-color: #1a1a1a;
    border: 1px solid #0e0e0e;
    gap: 1rem;
  }

  li.search-item img {
    width: 180px;
    height: 180px;
    border-radius: 0.75rem;
    object-fit: cover;
  }

  li.search-item h3 {
    font-size: 1.5rem;
    font-weight: 600;
    margin-right: 0.5rem;
  }

  li.search-item span {
    font-size: 1rem;
    font-weight: 300;
    position: relative;
    top: 3px;
  }

  li.search-item p {
    font-size: 0.875rem;
    margin-bottom: 0;
  }

  li.search-item:hover {
    filter: brightness(120%);
  }

  li.search-item .buttons button {
    width: 30px;
    height: 30px;
  }

  nav {
    display: flex;
    flex-direction: column;
    gap: 3rem;
    margin: 0.25rem 2.5rem;
  }

  nav a {
    color: white;
    font-family: "Work Sans", sans-serif;
    font-size: 0.875rem;
    text-decoration: none;
  }

  a:hover {
    filter: brightness(80%);
  }

  [data-view="search"] nav a[href="#search"],
  [data-view="create"] nav a[href="#create"],
  [data-view="home"] nav a[href="#home"],
  [data-view="saved"] nav a[href="#saved"] {
    text-decoration: underline red;
    text-decoration-thickness: 0.125rem;
    text-underline-offset: 0.5rem;
  }

  .home .separator {
    height: 40px;
    justify-content: center;
    padding-left: 0;
  }

  .home h2.separator-text {
    font-size: 1.5rem;
  }

  header .row .row:last-child {
    display: none;
  }

  header .top-row {
    width: inherit;
  }

  header {
    padding: 1.85rem 2.5rem;
    justify-content: space-between;
  }

  header h1,
  header i {
    font-size: 2rem;
  }

  header i {
    top: 4px;
  }

  header .title {
    gap: 1.5rem;
  }
}

